<resources>
    <string name="app_name">GradatiON</string>
    <string name="grokion_wordmark">GradatiON</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="add_new_system_message">Add new system message</string>
    <string name="grok_empty_prompt">What do you want to know?</string>
    <string name="grok_composer_hint">Ask anything</string>
    <string name="grok_composer_hint_with_system">(%1$s) Ask anything</string>
    <string name="grok_history_conversations_title">Conversations</string>
    <string name="grok_history_pinned_title">Pinned</string>
    <string name="grok_history_search">Search</string>
    <string name="grok_history_close">Close</string>
    <string name="grok_history_today">Today</string>
    <string name="grok_history_yesterday">Yesterday</string>
    <string name="grok_history_previous_7_days">Previous 7 Days</string>
    <string name="grok_history_older">Older</string>
    <string name="grok_history_empty_title">No chat history available</string>
    <string name="grok_history_empty_text">Start a new conversation to see it here.</string>
    <string name="grok_history_search_empty_title">No conversations found</string>
    <string name="grok_history_search_empty_text">Try searching for something else.</string>
    <string name="grok_history_pin">Pin</string>
    <string name="grok_history_unpin">Unpin</string>
    <string name="grok_history_rename">Rename</string>
    <string name="grok_history_delete">Delete</string>
    <string name="grok_history_import">Import</string>
    <string name="grok_history_export">Export</string>
    <string name="grok_history_more">More</string>
    <string name="grok_ask_tab">Ask</string>
    <string name="settings_group_app">App</string>
    <string name="settings_group_grok">AI</string>
    <string name="settings_group_voice">Voice</string>
    <string name="grok_history_delete_title">Delete conversation?</string>
    <string name="grok_history_delete_description">This conversation will be deleted. This action can\'t be undone.</string>
    <string name="grok_new_conversation">New conversation</string>
    <string name="grok_save_chat">Save chat</string>
    <string name="grok_settings">Settings</string>
    <string name="grok_attach_camera">Camera</string>
    <string name="grok_attach_gallery">Gallery</string>
    <string name="grok_attach_files">Files</string>
    <string name="grok_model_search_hint">Search models…</string>
    <string name="model_picker_title">Your Models</string>
    <string name="thinking_label">Thinking…</string>
    <string name="fork_prev">Previous response</string>
    <string name="fork_next">Next response</string>
    <string name="edit_response_title">Edit response</string>
    <string name="edit_response_hint">Response text</string>
    <string name="edit_response_save">Save</string>
    <string name="edit_response_cancel">Cancel</string>
    <string name="delete_message_title">Delete message?</string>
    <string name="delete_message_body">This message and everything after it will be removed from the chat.</string>
    <string name="delete_message_confirm">Delete</string>
    <string name="delete_model_title">Delete model?</string>
    <string name="delete_model_body">Remove \"%1$s\" from your models? This can\'t be undone.</string>
    <string name="delete_prompt_title">Delete prompt?</string>
    <string name="delete_prompt_body">This prompt will be removed. This can\'t be undone.</string>
    <string name="delete_system_message_title">Delete system message?</string>
    <string name="delete_system_message_body">This system message will be removed. This can\'t be undone.</string>
    <string name="delete_preset_title">Delete preset?</string>
    <string name="delete_preset_body">Delete \"%1$s\"? This can\'t be undone.</string>
    <string name="model_picker_browse">Browse catalogs</string>
    <string name="model_picker_browse_lan">LAN</string>
    <string name="model_picker_browse_cloud">OpenRouter</string>
    <string name="model_picker_sort">Sort</string>
    <string name="model_picker_filters">Filters</string>
    <string name="model_picker_sort_az">A–Z</string>
    <string name="model_picker_sort_newest">Newest</string>
    <string name="model_picker_filter_any_type">Any type</string>
    <string name="model_picker_filter_any_price">Any price</string>
    <string name="model_picker_filter_all">All</string>
    <string name="model_picker_filter_vision">Vision</string>
    <string name="model_picker_filter_image">Image</string>
    <string name="model_picker_filter_transcribe">Audio</string>
    <string name="model_picker_filter_free">Free</string>
    <string name="model_picker_filter_paid">Paid</string>
    <string name="model_picker_filter_lan">LAN</string>
    <string name="model_picker_filter_cloud">Cloud</string>
    <string name="model_picker_badge_reasoning">Reasoning</string>
    <string name="model_picker_add">Add model</string>
    <string name="model_picker_empty_title">No models match</string>
    <string name="model_picker_empty_body">Try another filter or browse LAN / OpenRouter catalogs.</string>
    <string name="model_picker_clear_filters">Clear filters</string>
    <string name="model_picker_source">Model source</string>
    <string name="model_picker_active">Active model</string>
    <string name="model_picker_more">Model options</string>
    <string name="model_picker_count_one">1 model</string>
    <string name="model_picker_count_many">%1$d models</string>
    <string name="model_picker_count_none">No matches</string>
    <string name="grok_sources">Sources</string>
    <string name="grok_appearance">Appearance</string>
    <string name="grok_appearance_preview_user">What is the truth of the universe?</string>
    <string name="grok_appearance_preview_grok">The universe is a vast system of laws and mysteries.</string>
    <string name="grok_suggest_summarize">Summarize this</string>
    <string name="grok_suggest_explain">Explain simply</string>
    <string name="grok_suggest_code">Write code</string>
    <string name="grok_suggest_brainstorm">Brainstorm ideas</string>
    <string name="settings_title">Settings</string>
    <string name="settings_section_appearance">Appearance</string>
    <string name="settings_section_voice">Voice</string>
    <string name="settings_section_haptics">Haptics</string>
    <string name="settings_section_models">Models &amp; API</string>
    <string name="settings_section_advanced">Advanced</string>
    <string name="settings_section_data">Data &amp; Privacy</string>
    <string name="settings_haptic_buttons">Haptic feedback on buttons</string>
    <string name="settings_haptic_responding">Haptic feedback while responding</string>
    <string name="settings_presets">Presets</string>
    <string name="settings_system_messages">System Messages</string>
    <string name="settings_manage_tools">Manage AI Tools</string>
    <string name="settings_advanced_reasoning">Advanced Reasoning</string>
    <string name="settings_licenses">Third-Party Licenses</string>
</resources>